--- a/app/social.html
+++ b/app/social.html
@@ -7,9 +7,10 @@
   <title>ExpertTarget Социальные сети</title>
   <link rel="preload" href="fonts/Montserrat-Regular.woff2" as="font" crossorigin />
   <link rel="preload" href="fonts/Montserrat-Bold.woff2" as="font" crossorigin />
-  <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
   <link rel="preload" href="css/style.min.css" as="style" crossorigin />
   <link rel="stylesheet" href="css/style.min.css" />
+  <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
+
 
   <link rel="apple-touch-icon" sizes="180x180" href="images/favicons/apple-touch-icon.png" />
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicons/favicon-32x32.png" />
@@ -210,10 +211,10 @@
               </li>
             </ul>
             
-            <div class="swiper-scrollbar"></div>
+            <div class="swiper-scrollbar social-scrollbar"></div>
           </div>
           <button type="button" class="swiper-button-prev social__button"></button>
-            <button type="button" class="swiper-button-next"></button>
+            <button type="button" class="swiper-button-next social__button"></button>
         </div>
       </div>
     </section>
@@ -520,33 +521,11 @@
             <a href="#" class="advantegs__link">Узнать больше</a>
             <img src="images/advan@1x.png" srcset="images/advan@2x.png 2x" alt="Супермен" class="advantegs__img" />
           </div>
-          <div class="advantegs__united">
-            <div class="advantegs__scroll-wrapper">
-              <div class="advantegs__scroll">
-                <span class="advantegs__scroll-circle"></span>
-                <span class="advantegs__scroll-line"></span>
-              </div>
-              <div class="advantegs__scroll-figure">
-                <p class="advantegs__scroll-number advantegs__scroll-first">
-                  01<span class="advantegs__scroll-part"> / 05</span>
-                </p>
-                <p class="advantegs__scroll-number advantegs__scroll-second">
-                  02<span class="advantegs__scroll-part"> / 05</span>
-                </p>
-                <p class="advantegs__scroll-number advantegs__scroll-third">
-                  03<span class="advantegs__scroll-part"> / 05</span>
-                </p>
-                <p class="advantegs__scroll-number advantegs__scroll-fourth">
-                  04<span class="advantegs__scroll-part"> / 05</span>
-                </p>
-                <p class="advantegs__scroll-number advantegs__scroll-fifth">
-                  05<span class="advantegs__scroll-part"> / 05</span>
-                </p>
-              </div>
-            </div>
-            <div class="advantegs__column">
-              <ul class="advantegs__list">
-                <li class="advantegs__item">
+          <div class="advantegs__united">            
+            <div class="advantegs__column swiper">
+              <div class=" advantegs-scrollbar swiper-scrollbar"></div>
+              <ul class="advantegs__list swiper-wrapper">
+                <li class="advantegs__item swiper-slide">
                   <div class="advantegs__item-wrapper">
                     <img src="images/adv11@1x.png" srcset="images/adv11@2x.png 2x" alt="Человек с сердцем"
                       class="advantegs__item-img" width="100" height="100" />
@@ -555,7 +534,7 @@
                     </p>
                   </div>
                 </li>
-                <li class="advantegs__item">
+                <li class="advantegs__item swiper-slide">
                   <div class="advantegs__item-wrapper">
                     <img src="images/adv12@1x.png" srcset="images/adv12@2x.png 2x" alt="Весы на книжках"
                       class="advantegs__item-img" width="100" height="100" />
@@ -565,7 +544,7 @@
                     </p>
                   </div>
                 </li>
-                <li class="advantegs__item">
+                <li class="advantegs__item swiper-slide">
                   <div class="advantegs__item-wrapper">
                     <img src="images/adv13@1x.png" srcset="images/adv13@2x.png 2x" alt="Рукопожатие"
                       class="advantegs__item-img" width="100" height="100" />
@@ -575,7 +554,7 @@
                     </p>
                   </div>
                 </li>
-                <li class="advantegs__item">
+                <li class="advantegs__item swiper-slide">
                   <div class="advantegs__item-wrapper">
                     <img src="images/adv14@1x.png" srcset="images/adv14@2x.png 2x" alt="Бирка скидочная"
                       class="advantegs__item-img" width="100" height="100" />
@@ -586,7 +565,7 @@
                     </p>
                   </div>
                 </li>
-                <li class="advantegs__item">
+                <li class="advantegs__item swiper-slide">
                   <div class="advantegs__item-wrapper">
                     <img src="images/adv15@1x.png" srcset="images/adv15@2x.png 2x" alt="Список"
                       class="advantegs__item-img" width="100" height="100" />
