--- a/app/company.html
+++ b/app/company.html
@@ -174,28 +174,29 @@
             </p>
           </div>
           <div class="settings__sources">
-            <div class="settings__scroll">
-              <button type="button" class="settings__btn settings__btn--up"></button>
-              <button type="button" class="settings__btn settings__btn--down"></button>
-              <span class="settings__scrolling"></span>
-            </div>
-            <div class="settings__social">
-              <ul class="settings__social-list">
-                <li class="settings__social-item">
+            
+
+
+            <div class="settings__social swiper">
+              <button type="button" class="settings__btn settings__btn--up swiper-button-prev"></button>
+              <button type="button" class="settings__btn settings__btn--down swiper-button-next"></button>
+              <div class="settings__scrolling swiper-scrollbar"></div>
+                            <ul class="settings__social-list swiper-wrapper">
+                <li class="settings__social-item swiper-slide">
                   <a href="#" class="settings__social-link">
                     <img src="images/klerk@1x.png" srcset="images/klerk@2x.png 2x" alt="Логотип Клерк"
                       class="settings__social-img" />
                     <span class="settings__social-text">От 6000 руб.</span>
                   </a>
                 </li>
-                <li class="settings__social-item">
+                <li class="settings__social-item swiper-slide">
                   <a href="#" class="settings__social-link">
                     <img src="images/em@1x.png" srcset="images/em@2x.png 2x" alt="Логотип Вечерняя Москва"
                       class="settings__social-img" />
                     <span class="settings__social-text">От 9500 руб.</span>
                   </a>
                 </li>
-                <li class="settings__social-item">
+                <li class="settings__social-item swiper-slide">
                   <a href="#" class="settings__social-link">
                     <img src="images/interfax@1x.png" srcset="images/interfax@2x.png 2x" alt="Логотип ИНТЕРФАКС"
                       class="settings__social-img" />
@@ -203,7 +204,7 @@
                   </a>
 
                 </li>
-                <li class="settings__social-item">
+                <li class="settings__social-item swiper-slide">
                   <a href="#" class="settings__social-link">
                     <img src="images/km@1x.png" srcset="images/km@2x.png 2x" alt="Логотип KM.RU"
                       class="settings__social-img" />
@@ -211,7 +212,7 @@
                   </a>
 
                 </li>
-                <li class="settings__social-item">
+                <li class="settings__social-item swiper-slide">
                   <a href="#" class="settings__social-link">
                     <img src="images/drive@1x.png" srcset="images/drive@2x.png 2x" alt="Логотип Драйв2"
                       class="settings__social-img" />
@@ -219,7 +220,7 @@
                   </a>
 
                 </li>
-                <li class="settings__social-item">
+                <li class="settings__social-item swiper-slide">
                   <a href="#" class="settings__social-link">
                     <img src="images/bankiru@1x.png" srcset="images/bankiru@2x.png 2x" alt="Логотип Банки ру"
                       class="settings__social-img" />
@@ -227,21 +228,21 @@
                   </a>
 
                 </li>
-                <li class="settings__social-item">
+                <li class="settings__social-item swiper-slide">
                   <a href="#" class="settings__social-link">
                     <img src="images/klerk@1x.png" srcset="images/klerk@2x.png 2x" alt="Логотип Клерк"
                       class="settings__social-img" />
                     <span class="settings__social-text">От 6000 руб.</span>
                   </a>
                 </li>
-                <li class="settings__social-item">
+                <li class="settings__social-item swiper-slide">
                   <a href="#" class="settings__social-link">
                     <img src="images/em@1x.png" srcset="images/em@2x.png 2x" alt="Логотип Вечерняя Москва"
                       class="settings__social-img" />
                     <span class="settings__social-text">От 9500 руб.</span>
                   </a>
                 </li>
-                <li class="settings__social-item">
+                <li class="settings__social-item swiper-slide">
                   <a href="#" class="settings__social-link">
                     <img src="images/interfax@1x.png" srcset="images/interfax@2x.png 2x" alt="Логотип ИНТЕРФАКС"
                       class="settings__social-img" />
@@ -249,7 +250,7 @@
                   </a>
 
                 </li>
-                <li class="settings__social-item">
+                <li class="settings__social-item swiper-slide">
                   <a href="#" class="settings__social-link">
                     <img src="images/km@1x.png" srcset="images/km@2x.png 2x" alt="Логотип KM.RU"
                       class="settings__social-img" />
@@ -257,7 +258,7 @@
                   </a>
 
                 </li>
-                <li class="settings__social-item">
+                <li class="settings__social-item swiper-slide">
                   <a href="#" class="settings__social-link">
                     <img src="images/drive@1x.png" srcset="images/drive@2x.png 2x" alt="Логотип Драйв2"
                       class="settings__social-img" />
@@ -265,7 +266,7 @@
                   </a>
 
                 </li>
-                <li class="settings__social-item">
+                <li class="settings__social-item swiper-slide">
                   <a href="#" class="settings__social-link">
                     <img src="images/bankiru@1x.png" srcset="images/bankiru@2x.png 2x" alt="Логотип Банки ру"
                       class="settings__social-img" />
