--- a/app/index.html
+++ b/app/index.html
@@ -172,81 +172,81 @@
               за 1 потенциального клиента вашей компании
             </p>
           </div>
-          <div class="settings__sources">
-            <div class="settings__scroll">
-              <button type="button" class="settings__btn settings__btn--up"></button>
-              <button type="button" class="settings__btn settings__btn--down"></button>
-              <span class="settings__scrolling"></span>
-            </div>
-            <div class="settings__social">
-              <ul class="settings__social-list">
-                <li class="settings__social-item">
+          <div class="settings__sources">          
+
+
+            <div class="settings__social swiper">
+              <button type="button" class="settings__btn settings__btn--up swiper-button-prev"></button>
+              <button type="button" class="settings__btn settings__btn--down swiper-button-next"></button>
+              <div class="settings__scrolling swiper-scrollbar"></div>
+              <ul class="settings__social-list swiper-wrapper">
+                <li class="settings__social-item swiper-slide">
                   <a href="#" class="settings__social-link">
                     <img src="images/yandex@1x.png" srcset="images/yandex@2x.png 2x" alt="Яндекс"
                       class="settings__social-img" />
                   </a>
                 </li>
-                <li class="settings__social-item">
+                <li class="settings__social-item swiper-slide">
                   <a href="#" class="settings__social-link">
                     <img src="images/Google@1x.png" srcset="images/Google@2x.png 2x" alt="Гугл"
                       class="settings__social-img" />
                   </a>
                 </li>
-                <li class="settings__social-item">
+                <li class="settings__social-item swiper-slide">
                   <a href="#" class="settings__social-link">
                     <img src="images/vk@1x.png" srcset="images/vk@2x.png 2x" alt="ВКонтакте"
                       class="settings__social-img" />
                   </a>
                 </li>
-                <li class="settings__social-item">
+                <li class="settings__social-item swiper-slide">
                   <a href="#" class="settings__social-link">
                     <img src="images/instagram@1x.png" srcset="images/instagram@2x.png 2x" alt="Инстаграмм"
                       class="settings__social-img" />
                   </a>
                 </li>
-                <li class="settings__social-item">
+                <li class="settings__social-item swiper-slide">
                   <a href="#" class="settings__social-link">
                     <img src="images/Facebook@1x.png" srcset="images/Facebook@2x.png 2x" alt="Фейсбук"
                       class="settings__social-img" />
                   </a>
                 </li>
-                <li class="settings__social-item">
+                <li class="settings__social-item swiper-slide">
                   <a href="#" class="settings__social-link">
                     <img src="images/mytarget@1x.png" srcset="images/mytarget@2x.png 2x" alt="Мой таргет"
                       class="settings__social-img" />
                   </a>
                 </li>
-                <li class="settings__social-item">
+                <li class="settings__social-item swiper-slide">
                   <a href="#" class="settings__social-link">
                     <img src="images/yandex@1x.png" srcset="images/yandex@2x.png 2x" alt="Яндекс"
                       class="settings__social-img" />
                   </a>
                 </li>
-                <li class="settings__social-item">
+                <li class="settings__social-item swiper-slide">
                   <a href="#" class="settings__social-link">
                     <img src="images/Google@1x.png" srcset="images/Google@2x.png 2x" alt="Гугл"
                       class="settings__social-img" />
                   </a>
                 </li>
-                <li class="settings__social-item">
+                <li class="settings__social-item swiper-slide">
                   <a href="#" class="settings__social-link">
                     <img src="images/vk@1x.png" srcset="images/vk@2x.png 2x" alt="ВКонтакте"
                       class="settings__social-img" />
                   </a>
                 </li>
-                <li class="settings__social-item">
+                <li class="settings__social-item swiper-slide">
                   <a href="#" class="settings__social-link">
                     <img src="images/instagram@1x.png" srcset="images/instagram@2x.png 2x" alt="Инстаграмм"
                       class="settings__social-img" />
                   </a>
                 </li>
-                <li class="settings__social-item">
+                <li class="settings__social-item swiper-slide">
                   <a href="#" class="settings__social-link">
                     <img src="images/Facebook@1x.png" srcset="images/Facebook@2x.png 2x" alt="Фейсбук"
                       class="settings__social-img" />
                   </a>
                 </li>
-                <li class="settings__social-item">
+                <li class="settings__social-item swiper-slide">
                   <a href="#" class="settings__social-link">
                     <img src="images/mytarget@1x.png" srcset="images/mytarget@2x.png 2x" alt="Мой таргет"
                       class="settings__social-img" />
