--- a/app/social.html
+++ b/app/social.html
@@ -369,8 +369,9 @@
           <h2 class="price__title title">Наши
             услуги и цены</h2>
         </div>
-        <div class="price__wrapper">
-          <ul class="price__list">
+
+        <div class="price__wrapper swiper">
+          <ul class="price__list swiper-wrapper">
             <li class="price__item price__desktop">
               <svg class="price__img" width="48" height="48">
                 <use xlink:href="images/sprites.svg#price"></use>
@@ -379,9 +380,9 @@
                 услуги и цены</h2>
               <p class="price__text">Показать все</p>
             </li>
-            <li class="price__item price__item--social">
+            <li class="price__item price__item--social swiper-slide">
               <div class="price__intro price__intro--social">
-                <h4 class="price__intro-heading">Комплексное продвижение
+                <h4 class="price__intro-heading">Продвижение
                   в Instagram</h4>
                 <p class="price__intro-help">Поможем настроить комплексное
                   продвижение в Instagram – оптимизация профиля, контент-план, посты, реклама.</p>
@@ -391,7 +392,7 @@
                 </div>
               </div>
             </li>
-            <li class="price__item price__item--social">
+            <li class="price__item price__item--social swiper-slide">
               <div class="price__intro price__intro--social">
                 <h4 class="price__intro-heading">Реклама
                   в социальных сетях</h4>
@@ -403,7 +404,7 @@
                 </div>
               </div>
             </li>
-            <li class="price__item price__item--social">
+            <li class="price__item price__item--social swiper-slide">
               <div class="price__intro price__intro--social">
                 <h4 class="price__intro-heading">Аудит SMM</h4>
                 <p class="price__intro-help">Поможем настроить комплексное
@@ -414,7 +415,7 @@
                 </div>
               </div>
             </li>
-            <li class="price__item price__item--social">
+            <li class="price__item price__item--social swiper-slide">
               <div class="price__intro price__intro--social">
                 <h4 class="price__intro-heading">Комплексное продвижение
                   ВКонтакте</h4>
@@ -426,7 +427,7 @@
                 </div>
               </div>
             </li>
-            <li class="price__item price__item--social">
+            <li class="price__item price__item--social swiper-slide">
               <div class="price__intro price__intro--social">
                 <h4 class="price__intro-heading">Комплексное продвижение
                   Facebook</h4>
@@ -438,7 +439,7 @@
                 </div>
               </div>
             </li>
-            <li class="price__item price__item--social">
+            <li class="price__item price__item--social swiper-slide">
               <div class="price__intro price__intro--social">
                 <h4 class="price__intro-heading">Комплексное продвижение
                   в Instagram</h4>
@@ -450,7 +451,7 @@
                 </div>
               </div>
             </li>
-            <li class="price__item price__item--social">
+            <li class="price__item price__item--social swiper-slide">
               <div class="price__intro price__intro--social">
                 <h4 class="price__intro-heading">Реклама
                   в социальных сетях</h4>
@@ -462,7 +463,7 @@
                 </div>
               </div>
             </li>
-            <li class="price__item price__item--social">
+            <li class="price__item price__item--social swiper-slide">
               <div class="price__intro price__intro--social">
                 <h4 class="price__intro-heading">Аудит SMM</h4>
                 <p class="price__intro-help">Поможем настроить комплексное
@@ -473,7 +474,7 @@
                 </div>
               </div>
             </li>
-            <li class="price__item price__item--social">
+            <li class="price__item price__item--social swiper-slide">
               <div class="price__intro price__intro--social">
                 <h4 class="price__intro-heading">Комплексное продвижение
                   ВКонтакте</h4>
@@ -485,7 +486,7 @@
                 </div>
               </div>
             </li>
-            <li class="price__item price__item--social">
+            <li class="price__item price__item--social swiper-slide">
               <div class="price__intro price__intro--social">
                 <h4 class="price__intro-heading">Комплексное продвижение
                   Facebook</h4>
@@ -498,17 +499,12 @@
               </div>
             </li>
           </ul>
+
         </div>
         <div class="price__nav">
-          <button type="button" class="price__nav-button price__nav-button--left"></button>
-          <div class="price__nav-wrapper">
-            <span class="price__nav-circle price__nav-circle--active"></span>
-            <span class="price__nav-circle"></span>
-            <span class="price__nav-circle"></span>
-            <span class="price__nav-circle"></span>
-            <span class="price__nav-circle"></span>
-          </div>
-          <button type="button" class="price__nav-button price__nav-button--right"></button>
+          <button type="button" class="price__nav-button price__nav-button--left swiper-button-prev"></button>
+          <div class="price-pagination swiper-pagination"></div>          
+          <button type="button" class="price__nav-button price__nav-button--right swiper-button-next"></button>
         </div>
       </div>
     </section>
